# tweaked-LPA-community-detection-algorithm

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: DEV_README.md
examples/: gen_large_graph.py  stream_run.py  stream_run_blocked.py  two_cliques.py
src/lpkit/: __init__.py  _cprop.c  _cprop.pyx  api.py  cli.py  generate_graph.py  label_propagation.py  stream.py
src/lpkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_api_wrapper.py  test_basic.py  test_compare_hdd_vs_ram.py  test_perf_memory_budget_trend.py  test_stream.py  test_stream_blocked.py  test_topologies.py  util_topologies.py
